tests/good/interpret/035-odd-even.clap
def even (x) = if (x = 0) then True else if (x = 1) then False else odd (x - 1)
with odd (x) = if (x = 0) then False else if (x = 1) then True else even (x - 1)

val z = even 42

