tests/bad/syntax/070-if-4.clap
val x = 
  if True then if False then U else U else U else U

